[gd_scene load_steps=3 format=3 uid="uid://cbftg3nk3t3wh"]

[ext_resource type="Script" uid="uid://c550680u615rk" path="res://Hud/hud.gd" id="1_xedcd"]
[ext_resource type="Script" uid="uid://xieuajoeo4fy" path="res://Hud/add_fixture_menu.gd" id="2_ngqfk"]

[node name="Hud" type="Node2D"]
script = ExtResource("1_xedcd")

[node name="ToggleModeButton" type="Button" parent="."]
offset_left = 1003.0
offset_top = 13.0
offset_right = 1136.0
offset_bottom = 68.0
text = "Enter Live Mode
"

[node name="LeftSideBar" type="Node2D" parent="."]

[node name="AddFixtureButton" type="Button" parent="LeftSideBar"]
offset_left = 50.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 110.0
text = "Add Fixture
"

[node name="AddFixtureMenu" type="Node2D" parent="."]
position = Vector2(-200, 0)

[node name="FixtureMenuList" type="ItemList" parent="AddFixtureMenu"]
offset_top = 30.0
offset_right = 200.0
offset_bottom = 548.0
fixed_icon_size = Vector2i(128, 128)
script = ExtResource("2_ngqfk")

[node name="CloseFixtureMenu" type="Button" parent="AddFixtureMenu"]
offset_top = 568.0
offset_right = 200.0
offset_bottom = 628.0
text = "Close
"

[connection signal="pressed" from="ToggleModeButton" to="." method="_on_toggle_mode_button_pressed"]
[connection signal="pressed" from="LeftSideBar/AddFixtureButton" to="AddFixtureMenu/FixtureMenuList" method="_on_add_fixture_button_pressed"]
[connection signal="focus_exited" from="AddFixtureMenu/FixtureMenuList" to="AddFixtureMenu/FixtureMenuList" method="_on_focus_exited"]
[connection signal="item_clicked" from="AddFixtureMenu/FixtureMenuList" to="AddFixtureMenu/FixtureMenuList" method="_on_item_clicked"]
[connection signal="button_down" from="AddFixtureMenu/CloseFixtureMenu" to="AddFixtureMenu/FixtureMenuList" method="disappear"]
